# wraval

./: .gitignore  1. data_generation.ipynb  2.a. SLM_tones.ipynb  2.b. LLM_tones.ipynb  3. judge_eval.ipynb  4.a human_eval_upload.py  4.b human_eval_parsing.py  LLM_translate.ipynb  NOTICE.txt  README.md  human_eval_upload.py  main.py  prompt_tones.py  prompts_judge.py  pyproject.toml  requirements.txt  settings.toml  setup.py
.kiro/steering/: amazon-builder-steering.md
config/: settings.toml
model_artifacts/: requirements.txt
resources/: presentation.md  wraval_presentation.pptx  ~$wraval_presentation.pptx
src/: action_generate.py  action_human_judge_parsing.py  action_inference.py  action_llm_judge.py  aws_utils.py  cloudformation_BedrockBatchInference.yml  completion.py  data_generator.py  data_utils.py  deploy.py  format.py  generate.py  groundtruth_eval_template.html  judge.py  model_router.py  prompt_tones.py  prompts.py  read_random_lines.py
src/wraval/: aws_config.py  main.py
src/wraval/actions/: action_deploy.py  action_examples.py  action_generate.py  action_human_judge_parsing.py  action_human_judge_upload.py  action_inference.py  action_llm_judge.py  action_results.py  action_sagemaker_chat.py  aws_utils.py  bleu_conf.py  cloudformation.yml  completion.py  data_generation_prompts.py  data_utils.py  deploy_sagemaker_endpoint.py  dspy_programs.py  dspy_provider.py  format.py  generate.py  groundtruth_eval_template.html  model_router.py  prompt_tones.py  prompts_judge.py  read_random_lines.py
src/wraval/model_artifacts/code/: inference.py  requirements.txt
